# ChangeLog for games-board/egtb-syzygy
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  01 Oct 2015; Ulrich Müller <ulm@gentoo.org> egtb-syzygy-20131213.ebuild:
  Install under /usr/share/ instead of /usr/share/games/.

*egtb-syzygy-20131213 (28 Sep 2015)

  28 Sep 2015; Ulrich Müller <ulm@gentoo.org> +egtb-syzygy-20131213.ebuild,
  +metadata.xml:
  Initial import. Ebuild contributed by me.
